--- a/template/styles/login.css
+++ b/template/styles/login.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2family=Poppins&display=swap');
+
 
 *{
     margin:0;
     padding:0;
     box-sizing: border-box;
-    font-family: 'Poppins',sans-sherif;
+    
 
 }
 body{
@@ -13,7 +13,7 @@ body{
     align-items: center;
     min-height: 100vh;
     background: #dfdfdf;
-    background-image: url(../images/authBg.png);
+    background-image: url(../images/green\ back.jpg);
     background-size: cover;
 }
 .login-box{
@@ -61,7 +61,7 @@ body{
     display: flex;
     justify-content: space-between;
     margin-bottom: 40px;
-   
+
 }
 section{
     display: flex;
