changed the button style for dashboard card

--- a/template/dashboard.html
+++ b/template/dashboard.html
@@ -176,7 +176,7 @@
               Quickly mark attendance for your class. Ensure all students are
               accounted for.
             </p>
-            <button class="p-2 rounded btn-outline-green">Start Now</button>
+            <button class="p-3 submit-btn">Start Now</button>
           </div>
           <div class="card p-4" style="width: 380px">
             <h6>Edit Class Details</h6>
@@ -184,12 +184,12 @@
               Modify class information including schedules, room and
               description.
             </p>
-            <button class="p-2 rounded btn-outline-green">Add Course</button>
+            <button class="p-3 submit-btn">Add Course</button>
           </div>
           <div class="card p-4" style="width: 380px">
             <h6>Update Attendance</h6>
             <p>Review and modify attendance records for accuracy.</p>
-            <button class="p-2 rounded btn-outline-green">Start Now</button>
+            <button class="p-3 submit-btn">Start Now</button>
           </div>
         </div>
       </section>
