--- a/template/styles/dashboard.css
+++ b/template/styles/dashboard.css
@@ -4,21 +4,6 @@ body {
   color: #34495e;
 }
 
-.btn-green {
-  background: #2ecc71;
-}
-.btn-outline-green{
-  border: 1px solid #2ecc71;
-  background-color: #fff;
-  color: #2ecc71;
-}
-
-.btn-outline-green:hover{
-  color: #fff;
-  background-color: #2ecc71;
-}
-
-
 .nav a{
   color: #0e0e0e;
   font-size: 12px;
@@ -26,6 +11,18 @@ body {
 
 .nav a:hover{
 color: #34495e;
+}
+
+.submit-btn{
+  background: grey;
+  color: white;
+  border: none;
+  border-radius: 30px;
+  transition: .3s;
+}
+.submit-btn:hover{
+    background: #000;
+    transform: scale(1.05,1);
 }
 
 @media screen and (max-width: 868px) {
