--- a/template/login.html
+++ b/template/login.html
@@ -6,41 +6,39 @@
     <link rel="stylesheet" href="styles/login.css" />
     <link rel="stylesheet" href="boostrap/css/bootstrap.min.css" />
     <script defer src="boostrap/js/bootstrap.bundle.min.js"></script>
-    <title>LASU</title>
+    <title>Lecturer log in page</title>
 </head>
 <body>
-
-    <div style="border-radius: 30px; border: 2px solid white; background-color: white  opacity 0.9;">
-        <div class="login-box">
-            <div class="login-header">
-                <header style="color: white;">Login</header>
+    <form action="login.php" method="POST">
+        <div style="border-radius: 30px; border: 2px solid white; background-color: white  opacity 0.9;">
+            <div class="login-box">
+                <div class="login-header">
+                    <header style="color: white;">Login</header>    
+                </div>
+                <div class="input-box">
+                    <input type="text" class="input-field" placeholder="PF Number" autocomplete="off" name="pfnum" required>
+                </div>
+                <div class="input-box">
+                    <input type="password" class="input-field" placeholder="Password" autocomplete="off" name="pass" required>
+                </div>
+                <div class="forgot">
+                    <section>
+                        <input type="checkbox" id="check">
+                        <label for="check">Remember me</label>
+                    </section>
+                    <section>
+                        <a href="#">Forgot password</a>
+                    </section>
+                </div>
+                <a class="input-submit">
+                    <button class="submit-btn" type="submit" id="submit"></button>
+                    <label for-="submit">Sign In</label>
+                </div>
+                    <div class="sign-up-link">
+                        <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+                </div>
+            </div>
         </div>
-            <div class="input-box">
-                <input type="text" class="input-field" placeholder="Matric Number" autocomplete="off" required>
-        </div>
-        <div class="input-box">
-            <input type="password" class="input-field" placeholder="Password" autocomplete="off" required>
-        </div>
-        <div class="forgot">
-            <section>
-                <input type="checkbox" id="check">
-                <label for="check">Remember me</label>
-            </section>
-            <section>
-                <a href="#">Forgot password</a>
-            </section>
-
-
-        </div>
-
-        <a href="dashboard.html" class="input-submit">
-            <button class="submit-btn" id="submit"></button>
-            <label for-="submit">Sign In</label>
-        </div>
-            <div class="sign-up-link">
-                <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
-        </div>
-        </div>
-    </div>
+    </form>
 </body>
 </html>
