--- a/template/signup.html
+++ b/template/signup.html
@@ -9,28 +9,33 @@
     <script defer src="boostrap/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <div style="border-radius: 30px; border: 2px solid white; background-color: white  opacity 0.9;">
-        <div class="login-box">
-            <div class="login-header">
-                <header style="color: white;">HELLO, WELCOME. </header>
-        </div>
-            <div class="input-box">
-                <input type="text" class="input-field" placeholder="Full Name" autocomplete="off" required>
-                <input type="text" class="input-field" placeholder="Email Address" autocomplete="off" required>
-                <input type="text" class="input-field" placeholder="Phone Number" autocomplete="off" required>
-                <input type="text" class="input-field" placeholder="Matric Number" autocomplete="off" required>
-                <input type="password" class="input-field" placeholder="Password" autocomplete="off" required>
-                <input type="password" class="input-field" placeholder="Confirm Password" autocomplete="off" required>
+    <form action="signupfunc.php" method="post">
+
+        <div style="border-radius: 30px; border: 2px solid white; background-color: white  opacity 0.9;">
+            <div class="login-box">
+                <div class="login-header">
+                    <header style="color: white;">HELLO, WELCOME. </header>
+            </div>
+                <div class="input-box">
+                    <input type="text" id="name" name="name" class="input-field" placeholder="Full Name" autocomplete="off" required>
+                    <input type="text" id="email" name="email" class="input-field" placeholder="Email Address" autocomplete="off" required>
+                    <input type="text" id="phonenum" name="phonenum" class="input-field" placeholder="Phone Number" autocomplete="off" required>
+                    <input type="text" id="pfnum" name="pfnum" placeholder="PF Number" class="input-field" autocomplete="off" required>
+                    <input type="password" id="pass" name="pass"  class="input-field" placeholder="Password" autocomplete="off" required>
+                    <input type="password" id="cpass" name="cpass" class="input-field" placeholder="Confirm Password" autocomplete="off" required>
+                </div>
+    
+            <a class="input-submit">
+                <button class="submit-btn" type="submit" id="submit"></button>
+                <label for="submit">SIGN UP</label>
+            </a>
+                <div class="login-link">
+                    <p>Already have an account? <a href="login.html">Login</a></p>
+            </div>
+            </div>
         </div>
 
-        <a href="dashboard.html" class="input-submit">
-            <button class="submit-btn" id="submit"></button>
-            <label for="submit">SIGN UP</label>
-        </a>
-            <div class="login-link">
-                <p>Already have an account? <a href="login.html">Login</a></p>
-        </div>
-        </div>
-    </div>
+    </form>
+    
 </body>
 </html>
