--- a/template/signup.html
+++ b/template/signup.html
@@ -15,7 +15,8 @@
                 <header style="color: white;">HELLO, WELCOME. </header>
         </div>
             <div class="input-box">
-                <input type="text" class="input-field" placeholder="Full Name" autocomplete="off" required>
+                <input type="text" class="input-field" placeholder="First Name" autocomplete="off" required>
+                <input type="text" class="input-field" placeholder="Last Name" autocomplete="off" required>
                 <input type="text" class="input-field" placeholder="Email Address" autocomplete="off" required>
                 <input type="text" class="input-field" placeholder="Phone Number" autocomplete="off" required>
                 <input type="text" class="input-field" placeholder="Matric Number" autocomplete="off" required>
