redirect login page to dashboard when successful

--- a/template/login.html
+++ b/template/login.html
@@ -9,7 +9,7 @@
     <title>Lecturer log in page</title>
 </head>
 <body>
-    <form action="login.php" method="POST">
+    <form action="../login.php" method="POST">
         <div style="border-radius: 30px; border: 2px solid white; background-color: white  opacity 0.9;">
             <div class="login-box">
                 <div class="login-header">
@@ -33,6 +33,7 @@
                 <a class="input-submit">
                     <button class="submit-btn" type="submit" id="submit"></button>
                     <label for-="submit">Sign In</label>
+                </a>
                 </div>
                     <div class="sign-up-link">
                         <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
