--- a/template/signup.html
+++ b/template/signup.html
@@ -17,12 +17,12 @@
                     <header style="color: white;">HELLO, WELCOME. </header>
             </div>
                 <div class="input-box">
-                    <input type="text" id="name" name="name" class="input-field" placeholder="Full Name" autocomplete="off" required>
-                    <input type="text" id="email" name="email" class="input-field" placeholder="Email Address" autocomplete="off" required>
-                    <input type="text" id="phonenum" name="phonenum" class="input-field" placeholder="Phone Number" autocomplete="off" required>
-                    <input type="text" id="pfnum" name="pfnum" placeholder="PF Number" class="input-field" autocomplete="off" required>
-                    <input type="password" id="pass" name="pass"  class="input-field" placeholder="Password" autocomplete="off" required>
-                    <input type="password" id="cpass" name="cpass" class="input-field" placeholder="Confirm Password" autocomplete="off" required>
+                    <input type="text" name="fname" class="input-field" placeholder="First Name" autocomplete="off" required>
+                    <input type="text" name="lname" class="input-field" placeholder="Last Name" autocomplete="off" required>
+                    <input type="text" name="email" class="input-field" placeholder="Email Address" autocomplete="off" required>
+                    <input type="text" name="pfnum" placeholder="PF Number" class="input-field" autocomplete="off" required>
+                    <input type="password" name="pass"  class="input-field" placeholder="Password" autocomplete="off" required>
+                    <input type="password" name="cpass" class="input-field" placeholder="Confirm Password" autocomplete="off" required>
                 </div>
     
             <a class="input-submit">
