added verification to make sure that user cannot access dashboard from the url withoutlogging in

--- a/template/login.html
+++ b/template/login.html
@@ -9,7 +9,7 @@
     <title>Lecturer log in page</title>
 </head>
 <body>
-    <form action="../login.php" method="POST">
+    <form action="../login_handling.php" method="POST">
         <div style="border-radius: 30px; border: 2px solid white; background-color: white  opacity 0.9;">
             <div class="login-box">
                 <div class="login-header">
