--- a/template/signup.html
+++ b/template/signup.html
@@ -1,3 +1,6 @@
+<?php
+
+ ?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +12,7 @@
     <script defer src="boostrap/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <form action="signupfunc.php" method="post">
+    <form action="../signup_handling.php" method="post">
 
         <div style="border-radius: 30px; border: 2px solid white; background-color: white  opacity 0.9;">
             <div class="login-box">
