Added student icon

--- a/template/dashboard.html
+++ b/template/dashboard.html
@@ -70,6 +70,12 @@
               <p>Report</p>
             </a>
           </li>
+          <li class='nav-item'>
+            <a href="#" class="nav-link">
+              <img src="images/ph--student.png" alt="students" style="width: 25px">
+              <p>Students</p>
+            </a>
+          </li>
           <li class="nav-item mt-auto mb-5">
             <a href="#" class="nav-link"
               ><img
@@ -129,6 +135,12 @@
           <a href="#" class="nav-link"
             ><img src="images/report.png" alt="report" style="width: 25px" />
             <p>Report</p>
+          </a>
+        </li>
+        <li class='nav-item'></li>
+          <a href="#" class="nav-link">
+            <img src="images/ph--student.png" alt="students" style="width: 25px">
+            <p>Students</p>
           </a>
         </li>
         <li class="nav-item mt-auto">
