--- a/template/styles/signup.css
+++ b/template/styles/signup.css
@@ -4,7 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  
+
 }
 body {
   display: flex;
@@ -37,7 +37,7 @@ body {
   font-size: 17px;
   padding: 0 25px;
   margin-bottom: 15px;
-  border-radius: 30px;
+  border-radius: 10px 100px / 120px 100px;
   border: none;
   box-shadow: 0px 5px 10px 1px rgba(0, 0, 0, 0.05);
   outline: none;
