Added a page for courses

--- a/template/students.html
+++ b/template/students.html
@@ -53,9 +53,20 @@
     </aside>
 
     <div class="container">
+
+        <div class="container-fluid"></div>
+            <div class="col-sm-md-12">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h2>All Students</h2>
+                   
+                    <div>   
+                </div>
+            </div>
+        </div>
         <h2>
         </h2>
-        <p></p>
+        
         <table class="table">
             <thead style="background-color: limegreen; justify-content: center;">
                 <tr style="color: white;">
