--- a/template/courses.html
+++ b/template/courses.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/dashboard.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     
+    
     <link rel="stylesheet" href="boostrap/css/bootstrap.min.css" />
     <script defer src="boostrap/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
@@ -57,8 +58,23 @@
 
     <div class="container">
         
-        <div class="header-container">
-        <h2 class="site-header" style="margin-top: 50px;">All Courses</h2>
+       <div class="container" style="width: 100%;">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h2 style="font-size: 30px; margin-top: 40px;">All Courses</h2>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="input-box" style="float: right;"></div>
+                        <h2 style="font-size: 18px; margin-top: 50px;">
+                            <input type="Search" placeholder="Search...">
+                            <i class='bx bxs-lock-alt' style="size: 10px;"></i>
+                        </h2>
+                    </div>
+                </div>
+            </div>
+        </div>
         </div>
                 
 
@@ -67,13 +83,12 @@
 
         
         <table class="table">
-            <thead style="background-color: limegreen; justify-content: center;">
+            <thead style="background-color: limegreen;">
                 <tr style="color: white;">
                     <th>#</th>
                     <th>Course code</th>
                     <th>Course title</th>
                     <th>Status</th>
-                    
                 </tr>
             </thead>
             <tbody>
