added search bar

--- a/template/courses.html
+++ b/template/courses.html
@@ -58,16 +58,16 @@
 
     <div class="container">
         
-       <div class="container" style="width: 100%;">
+       <div class="container" style="width: 100%; margin-top: 40px;">
         <div class="row">
             <div class="col-sm-12">
                 <div class="row">
                     <div class="col-sm-6">
-                        <h2 style="font-size: 30px; margin-top: 40px;">All Courses</h2>
+                        <h2 style="font-size: 30px;">All Courses</h2>
                     </div>
                     <div class="col-sm-6">
                         <div class="input-box" style="float: right;"></div>
-                        <h2 style="font-size: 18px; margin-top: 50px;">
+                        <h2 style="font-size: 18px;">
                             <input type="Search" placeholder="Search...">
                             <i class='bx bxs-lock-alt' style="size: 10px;"></i>
                         </h2>
