edited the search bar

--- a/template/courses.html
+++ b/template/courses.html
@@ -63,11 +63,11 @@
             <div class="col-sm-12">
                 <div class="row">
                     <div class="col-sm-6">
-                        <h2 style="font-size: 30px;">All Courses</h2>
+                        <h2 style="font-size: 40px;">All Courses</h2>
                     </div>
                     <div class="col-sm-6">
                         <div class="input-box" style="float: right;"></div>
-                        <h2 style="font-size: 18px;">
+                        <h2 style="font-size: 20px; margin-top: 20px; margin-left: 400px;">
                             <input type="Search" placeholder="Search...">
                             <i class='bx bxs-lock-alt' style="size: 10px;"></i>
                         </h2>
@@ -83,7 +83,7 @@
 
         
         <table class="table">
-            <thead style="background-color: limegreen;">
+            <thead class="table-custom-success">
                 <tr style="color: white;">
                     <th>#</th>
                     <th>Course code</th>
