--- a/template/lecturer.html
+++ b/template/lecturer.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="boostrap/css/bootstrap.min.css" />
     <script defer src="boostrap/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-    <title>Document</title>
+    <title>Lecturer's page</title>
 </head>
 
 
@@ -63,7 +63,7 @@
             <div class="col-sm-12">
                 <div class="row">
                     <div class="col-sm-6">
-                        <h2 style="font-size: 40px;">All Courses</h2>
+                        <h2 style="font-size: 40px;">All Lecturers</h2>
                     </div>
                     <div class="col-sm-6">
                         <div class="input-box" style="float: right;"></div>
@@ -84,93 +84,53 @@
         
         <table class="table">
             <thead class="table-custom-success">
-                <tr>
+                <tr style="color: white;">
                     <th>#</th>
-                    <th>Course code</th>
-                    <th>Course title</th>
-                    <th>Status</th>
+                    <th>First Name</th>
+                    <th>Last name</th>
+                    <th>Email</th>
+                    <th>Courses</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>1</td>
-                    <td>CSC 113</td>
-                    <td>Introduction to computer science</td>
-                    <td>Assigned</td>
-                    
-                    
+                    <td>John</td>
+                    <td>Doe</td>
+                    <td>johndoe@gmail.com</td>
+                    <td>CSC 113, 419,</td>
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td>CSC 219</td>
-                    <td>Python Programming</td>
-                    <td>Assigned</td>
+                    <td>Emily</td>
+                    <td>Davis</td>
+                    <td>emilydavis@gmail.com</td>
+                    <td>CSC 304, 212</td>
                     
                     
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td>CSC 305</td>
-                    <td>Web development</td>
-                    <td>Assigned</td>
+                    <td>Adam</td>
+                    <td>Sandler</td>
+                    <td>adamsandler@gmail.com</td>
+                    <td>CSC 312, 405</td>
                     
                     
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td>CSC 225</td>
-                    <td>Data Structure</td>
-                    <td>Unassigned</td>
-                    
-                    
+                    <td>Chris</td>
+                    <td>Middleton</td>
+                    <td>chrismiddleton@gmail.com</td>
+                    <td>CSC 111, 124</td>
                 </tr>
                 <tr>
                     <td>5</td>
-                    <td>CSC 217</td>
-                    <td>Operating System</td>
-                    <td>Assigned</td>
-                    
-                    
-                </tr>
-                <tr>
-                    <td>6</td>
-                    <td>CSC 322</td>
-                    <td>Networking</td>
-                    <td>Assigned</td>
-                    
-                    
-                </tr>
-                <tr>
-                    <td>7</td>
-                    <td>CSC 411</td>
-                    <td>Information Science</td>
-                    <td>Unassigned</td>
-                    
-                    
-                </tr>
-                <tr>
-                    <td>8</td>
-                    <td>STA 129</td>
-                    <td>Introduction to Statistics</td>
-                    <td>Unassigned</td>
-                    
-                </tr>
-                <tr>
-                    <td>9</td>
-                    <td>CSC 429</td>
-                    <td>Human Computer Interaction</td>
-                    <td>Assigned</td>
-                
-                    
-                </tr>
-                    <td>10</td>
-                    <td>CSC 425</td>
-                    <td>Introduction to Cybersecurity</td>
-                    <td>Assigned</td>
-                
-                    
-                </tr>
-                
+                    <td>Charles</td>
+                    <td>Elton</td>
+                    <td>charleselton1@gmail.com</td>
+                    <td>CSC 201, 425</td>
                 </tr>
             </tbody>
         </table>
