--- a/template/students.html
+++ b/template/students.html
@@ -54,21 +54,31 @@
 
     <div class="container">
 
-        <div class="container-fluid"></div>
-            <div class="col-sm-md-12">
-                <div class="row">
-                    <div class="col-md-6">
-                        <h2>All Students</h2>
-                   
-                    <div>   
+        <div class="container" style="width: 100%; margin-top: 40px;">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <h2 style="font-size: 40px;">All Students</h2>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="input-box" style="float: right;"></div>
+                            <h2 style="font-size: 20px; margin-top: 20px; margin-left: 400px;">
+                                <input type="Search" placeholder="Search...">
+                                <i class='bx bxs-lock-alt' style="size: 10px;"></i>
+                            </h2>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-        <h2>
-        </h2>
+            </div>
+                    
+    
+            <br>
+            <br>
         
         <table class="table">
-            <thead style="background-color: limegreen; justify-content: center;">
+            <thead class="table-custom-success">
                 <tr style="color: white;">
                     <th>#</th>
                     <th>Firstname</th>
