--- a/template/teacherdashboard.html
+++ b/template/teacherdashboard.html
@@ -25,19 +25,19 @@
       </a>
       <ul class="nav flex-column mt-4 h-100">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">
+          <a class="nav-link active" aria-current="page" href="teacherdashboard.html">
             <img src="images/dashboard.png"  alt="dashboard" style="width: 25px"   />
             <p>Dashboard</p>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#"
+          <a class="nav-link" href="courses.html"
             ><img src="images/courses.png" alt="courses" style="width: 20px" />
             <p>Courses</p>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">
+          <a class="nav-link" href="attendance.html">
             <img
               src="images/attendance.png"
               alt="attendance"
@@ -47,7 +47,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link"
+          <a href="students.html" class="nav-link"
             ><img src="images/classes.png" alt="profile" style="width: 25px" />
             <p>Students</p>
           </a>
