--- a/template/styles/homepage.css
+++ b/template/styles/homepage.css
@@ -60,7 +60,7 @@ form {
     width: 100%;
     height: 90vh;
     /* background-color: #4CAF50; */
-    background: url(../images/bgImg.jpg);
+    background: url(../images/green\ back.jpg);
     background-position: center;
     background-size: cover;
   }
