linked the dashboard to the sign up and login in button

--- a/template/login.html
+++ b/template/login.html
@@ -33,7 +33,7 @@
 
         </div>
 
-        <a href="dashboard.html" class="input-submit">
+        <a href="teacherdashboard.html" class="input-submit">
             <button class="submit-btn" id="submit"></button>
             <label for-="submit">Sign In</label>
         </div>
