--- a/template/signup.html
+++ b/template/signup.html
@@ -24,7 +24,7 @@
                 <input type="password" class="input-field" placeholder="Confirm Password" autocomplete="off" required>
         </div>
 
-        <a href="dashboard.html" class="input-submit">
+        <a href="teacherdashboard.html" class="input-submit">
             <button class="submit-btn" id="submit"></button>
             <label for="submit">SIGN UP</label>
         </a>
