--- a/template/teacherdashboard.html
+++ b/template/teacherdashboard.html
@@ -65,7 +65,7 @@
        
     <main class="p-md-4 pt-0 w-100">
       <div class="p-3 pt-md-0 d-flex justify-content-between align-items-center pb-2 border-bottom">
-        <h4 class="">Welcome back, Teacher</h4>
+        <h4 class="">Welcome back, Lecturer</h4>
         <i class="bi bi-list d-block d-md-none" id="menuBtn" style="font-size: 40px"></i>
       </div>
 
