added validation message to the sign up form

--- a/template/homepage.html
+++ b/template/homepage.html
@@ -17,7 +17,7 @@
             </a>
 
             <div class="">
-                <a href="signup.html" class="btn btn-success">Sign up</a>
+                <a href="../signup.php" class="btn btn-success">Sign up</a>
                 <a href="login.html" class="btn btn-success">Log in</a>
             </div>
           </div>
