--- a/template/login.html
+++ b/template/login.html
@@ -36,7 +36,7 @@
                 </a>
                 </div>
                     <div class="sign-up-link">
-                        <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+                        <p>Don't have an account? <a href="../signup.php">Sign Up</a></p>
                 </div>
             </div>
         </div>
