--- a/template/courses.html
+++ b/template/courses.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/dashboard.css"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    
-    
+    <link rel="stylesheet" href="styles/dashboard.css" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+
     <link rel="stylesheet" href="boostrap/css/bootstrap.min.css" />
     <script defer src="boostrap/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
@@ -32,7 +33,8 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="courses.html"><img src="images/courses.png" alt="courses" style="width: 20px" />
+                <a class="nav-link" href="courses.html"><img src="images/courses.png" alt="courses"
+                        style="width: 20px" />
                     <p>Courses</p>
                 </a>
             </li>
@@ -43,7 +45,8 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="students.html" class="nav-link"><img src="images/classes.png" alt="profile" style="width: 25px" />
+                <a href="students.html" class="nav-link"><img src="images/classes.png" alt="profile"
+                        style="width: 25px" />
                     <p>Students</p>
                 </a>
             </li>
@@ -57,31 +60,31 @@
     </aside>
 
     <div class="container">
-        
-       <div class="container" style="width: 100%; margin-top: 40px;">
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="row">
-                    <div class="col-sm-6">
-                        <h2 style="font-size: 40px;">All Courses</h2>
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="input-box" style="float: right;"></div>
-                        <h2 style="font-size: 20px; margin-top: 20px; margin-left: 400px;">
-                            <input type="Search" placeholder="Search...">
-                            <i class='bx bxs-lock-alt' style="size: 10px;"></i>
-                        </h2>
+
+        <div class="container" style="width: 100%; margin-top: 40px;">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <h2 style="font-size: 40px;">All Courses</h2>
+                        </div>
+                        <div class="col-sm-6">
+                            <div class="input-box" style="float: right;"></div>
+                            <h2 style="font-size: 20px; margin-top: 20px; margin-left: 400px;">
+                                <input type="Search" placeholder="Search...">
+                                <i class='bx bxs-lock-alt' style="size: 10px;"></i>
+                            </h2>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        </div>
-                
+
 
         <br>
         <br>
 
-        
+
         <table class="table">
             <thead class="table-custom-success">
                 <tr>
@@ -97,80 +100,80 @@
                     <td>CSC 113</td>
                     <td>Introduction to computer science</td>
                     <td>Assigned</td>
-                    
-                    
+
+
                 </tr>
                 <tr>
                     <td>2</td>
                     <td>CSC 219</td>
                     <td>Python Programming</td>
                     <td>Assigned</td>
-                    
-                    
+
+
                 </tr>
                 <tr>
                     <td>3</td>
                     <td>CSC 305</td>
                     <td>Web development</td>
                     <td>Assigned</td>
-                    
-                    
+
+
                 </tr>
                 <tr>
                     <td>4</td>
                     <td>CSC 225</td>
                     <td>Data Structure</td>
                     <td>Unassigned</td>
-                    
-                    
+
+
                 </tr>
                 <tr>
                     <td>5</td>
                     <td>CSC 217</td>
                     <td>Operating System</td>
                     <td>Assigned</td>
-                    
-                    
+
+
                 </tr>
                 <tr>
                     <td>6</td>
                     <td>CSC 322</td>
                     <td>Networking</td>
                     <td>Assigned</td>
-                    
-                    
+
+
                 </tr>
                 <tr>
                     <td>7</td>
                     <td>CSC 411</td>
                     <td>Information Science</td>
                     <td>Unassigned</td>
-                    
-                    
+
+
                 </tr>
                 <tr>
                     <td>8</td>
                     <td>STA 129</td>
                     <td>Introduction to Statistics</td>
                     <td>Unassigned</td>
-                    
+
                 </tr>
                 <tr>
                     <td>9</td>
                     <td>CSC 429</td>
                     <td>Human Computer Interaction</td>
                     <td>Assigned</td>
-                
-                    
+
+
                 </tr>
-                    <td>10</td>
-                    <td>CSC 425</td>
-                    <td>Introduction to Cybersecurity</td>
-                    <td>Assigned</td>
-                
-                    
+                <td>10</td>
+                <td>CSC 425</td>
+                <td>Introduction to Cybersecurity</td>
+                <td>Assigned</td>
+
+
                 </tr>
-                
+
                 </tr>
             </tbody>
         </table>
