--- a/template/students.html
+++ b/template/students.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/dashboard.css" />
-
     <link rel="stylesheet" href="boostrap/css/bootstrap.min.css" />
     <script defer src="boostrap/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
@@ -56,26 +55,12 @@
 
     <div class="container">
 
-<<<<<<< HEAD
-        <div class="container-fluid"></div>
-        <div class="col-sm-md-12">
-            <div class="row">
-                <div class="col-md-6">
-                    <h2>All Students</h2>
-
-                    
-                
-                </div>
-            </div>
-            <h2>
-            </h2>
-=======
         <div class="container" style="width: 100%; margin-top: 40px;">
             <div class="row">
                 <div class="col-sm-12">
                     <div class="row">
                         <div class="col-sm-6">
-                            <h2 style="font-size: 40px;">All Students</h2>
+                            <h2 style="font-size: 40px;">Students</h2>
                         </div>
                         <div class="col-sm-6">
                             <div class="input-box" style="float: right;"></div>
@@ -87,13 +72,13 @@
                     </div>
                 </div>
             </div>
-            </div>
+        </div>
                     
     
             <br>
             <br>
         
-        <table class="table">
+        <table class="table" style="max-width: 100%;">
             <thead class="table-custom-success">
                 <tr style="color: white;">
                     <th>#</th>
@@ -101,7 +86,6 @@
                     <th>Lastname</th>
                     <th>Matric No</th>
                     <th>Email</th>
-                    <th>Check</th>
                 </tr>
             </thead>
             <tbody>
@@ -111,55 +95,18 @@
                     <td>Adeleke</td>
                     <td>2024001</td>
                     <td>nimah@gmail.com</td>
-                    <td>
-                        <div class="form-check">
-                            <label class="form-check-label">
-                                <input class="form-check-input" name="" id="" type="checkbox" value="checkedValue"
-                                    aria-label="Text for screen reader">
-                            </label>
-                        </div>
-                    </td>
+                    
                 </tr>
                 <tr>
                     <td>2</td>
                     <td>Peter</td>
-                    <td>Lastname</td>
+                    <td>Last name</td>
                     <td>2024002</td>
                     <td>peter@gmail.com</td>
-                    <td>
-                        <div class="form-check">
-                            <label class="form-check-label">
-                                <input class="form-check-input" name="" id="" type="checkbox" value="checkedValue"
-                                    aria-label="Text for screen reader">
->>>>>>> 31f31f057c0077425294141888d6ef3182ad6e1f
+                </tr>
 
-            <table class="table">
-                <thead class="table-custom-success">
-                    <tr style="color: white;">
-                        <th>#</th>
-                        <th>Firstname</th>
-                        <th>Lastname</th>
-                        <th>Matric No</th>
-                        <th>Email</th>
 
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Nimah</td>
-                        <td>Adeleke</td>
-                        <td>2024001</td>
-                        <td>nimah@gmail.com</td>
-
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Peter</td>
-                        <td>Lastname</td>
-                        <td>2024002</td>
-                        <td>peter@gmail.com</td>
-
+                
                     </tr>
                     <tr>
                         <td>3</td>
