--- a/template/hoddashboard.html
+++ b/template/hoddashboard.html
@@ -35,7 +35,7 @@
             </li>
 
             <li class="nav-item">
-                <a href="teachers.html" class="nav-link"><img src="images/classes.png" alt="profile"
+                <a href="lecturer.html" class="nav-link"><img src="images/classes.png" alt="profile"
                         style="width: 25px" />
                     <p>Teachers</p>
 
@@ -89,7 +89,7 @@
                      <td>CSC 113</td>
                      <td>Introduction to computer science</td>
                      <td>
-                        <a class="btn btn-success" href="students.html" role="button">Assign</a>
+                        <a class="btn btn-success" href="assigncourse.html" role="button">Assign</a>
                      </td>
                  </tr>
                  <tr>
@@ -97,7 +97,7 @@
                      <td>CSC 219</td>
                      <td>Python Programming</td>
                      <td>
-                        <a class="btn btn-success" href="students.html" role="button">Assign</a>
+                        <a class="btn btn-success" href="assigncourse.html" role="button">Assign</a>
                      </td>                     
                      
                  </tr>
@@ -106,7 +106,7 @@
                      <td>CSC 305</td>
                      <td>Web development</td>
                      <td>
-                        <a class="btn btn-success" href="students.html" role="button">Assign</a>
+                        <a class="btn btn-success" href="assigncourse.html" role="button">Assign</a>
                      </td>
                      
                      
@@ -116,7 +116,7 @@
                      <td>CSC 225</td>
                      <td>Data Structure</td>
                      <td>
-                        <a class="btn btn-success" href="students.html" role="button">Assign</a>
+                        <a class="btn btn-success" href="assigncourse.html" role="button">Assign</a>
                      </td>
                      
                  </tr>
@@ -125,7 +125,7 @@
                      <td>CSC 217</td>
                      <td>Operating System</td>
                      <td>
-                        <a class="btn btn-success" href="students.html" role="button">Assign</a>
+                        <a class="btn btn-success" href="assigncourse.html" role="button">Assign</a>
                      </td>
                      
                      
@@ -135,7 +135,7 @@
                      <td>CSC 322</td>
                      <td>Networking</td>
                      <td>
-                        <a class="btn btn-success" href="students.html" role="button">Assign</a>
+                        <a class="btn btn-success" href="assigncourse.html" role="button">Assign</a>
                      </td>
                      
                      
@@ -145,7 +145,7 @@
                      <td>CSC 411</td>
                      <td>Information Science</td>
                      <td>
-                        <a class="btn btn-success" href="students.html" role="button">Assign</a>
+                        <a class="btn btn-success" href="assigncourse.html" role="button">Assign</a>
                      </td>
                      
                      
@@ -155,7 +155,7 @@
                      <td>STA 129</td>
                      <td>Introduction to Statistics</td>
                      <td>
-                        <a class="btn btn-success" href="students.html" role="button">Assign</a>
+                        <a class="btn btn-success" href="assigncourse.html" role="button">Assign</a>
                      </td>
                      
                  </tr>
@@ -164,7 +164,7 @@
                      <td>CSC 429</td>
                      <td>Human Computer Interaction</td>
                      <td>
-                        <a class="btn btn-success" href="students.html" role="button">Assign</a>
+                        <a class="btn btn-success" href="assigncourse.html" role="button">Assign</a>
                      </td>
                  
                      
@@ -173,7 +173,7 @@
                      <td>CSC 425</td>
                      <td>Introduction to Cybersecurity</td>
                      <td>
-                        <a class="btn btn-success" href="students.html" role="button">Assign</a>
+                        <a class="btn btn-success" href="assigncourse.html" role="button">Assign</a>
                      </td>
                  
                      
