made changes to the icon linking

--- a/template/assigncourse.html
+++ b/template/assigncourse.html
@@ -27,27 +27,23 @@
         </a>
         <ul class="nav flex-column mt-4 h-100">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="teacherdashboard.html">
+                <a class="nav-link active" aria-current="page" href="hoddashboard.html">
                     <img src="images/dashboard.png" alt="dashboard" style="width: 25px" />
                     <p>Dashboard</p>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="courses.html"><img src="images/courses.png" alt="courses"
-                        style="width: 20px" />
+                <a class="nav-link active" aria-current="page" href="courses.html">
+                    <img src="images/courses.png" alt="dashboard" style="width: 25px" />
                     <p>Courses</p>
                 </a>
             </li>
+
             <li class="nav-item">
-                <a class="nav-link" href="attendance.html">
-                    <img src="images/attendance.png" alt="attendance" style="width: 25px" />
-                    <p>Attendance</p>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="students.html" class="nav-link"><img src="images/classes.png" alt="profile"
+                <a href="lecturer.html" class="nav-link"><img src="images/classes.png" alt="profile"
                         style="width: 25px" />
-                    <p>Students</p>
+                    <p>Lecturers</p>
+
                 </a>
             </li>
             <li class="nav-item">
@@ -58,6 +54,7 @@
 
         </ul>
     </aside>
+
 
     <!DOCTYPE html>
     <html lang="en">
@@ -74,7 +71,7 @@
     <body>
         <br>
         <br>
-        <div class="container" style="background-color: #DBFFDB; width: 65%; height: 700px; margin-top: 100px; padding: 30px; height: fit-content;">
+        <div class="container" style="background-color: #DBFFDB; width: 65%; height: 700px; margin-top: 30px; padding: 30px; height: fit-content;">
     
             <head>
                 <h1 style="font-size: 30px; margin-bottom: -40px;">Assign Courses</h1>
