--- a/template/hoddashboard.html
+++ b/template/hoddashboard.html
@@ -37,7 +37,7 @@
             <li class="nav-item">
                 <a href="lecturer.html" class="nav-link"><img src="images/classes.png" alt="profile"
                         style="width: 25px" />
-                    <p>Teachers</p>
+                    <p>Lecturers</p>
 
                 </a>
             </li>
