--- a/template/lecturer.html
+++ b/template/lecturer.html
@@ -26,25 +26,20 @@
         </a>
         <ul class="nav flex-column mt-4 h-100">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">
+                <a class="nav-link active" aria-current="page" href="hoddashboard.html">
                     <img src="images/dashboard.png" alt="dashboard" style="width: 25px" />
                     <p>Dashboard</p>
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#"><img src="images/courses.png" alt="courses" style="width: 20px" />
+                <a class="nav-link" href="courses.html"><img src="images/courses.png" alt="courses" style="width: 20px" />
                     <p>Courses</p>
                 </a>
             </li>
+           
             <li class="nav-item">
-                <a class="nav-link" href="#">
-                    <img src="images/attendance.png" alt="attendance" style="width: 25px" />
-                    <p>Attendance</p>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link"><img src="images/classes.png" alt="profile" style="width: 25px" />
-                    <p>Students</p>
+                <a href="lecturer.html" class="nav-link"><img src="images/classes.png" alt="profile" style="width: 25px" />
+                    <p>Lecturer</p>
                 </a>
             </li>
             <li class="nav-item">
