--- a/template/courses.html
+++ b/template/courses.html
@@ -27,7 +27,7 @@
         </a>
         <ul class="nav flex-column mt-4 h-100">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="teacherdashboard.html">
+                <a class="nav-link active" aria-current="page" href="hoddashboard.html">
                     <img src="images/dashboard.png" alt="dashboard" style="width: 25px" />
                     <p>Dashboard</p>
                 </a>
@@ -38,16 +38,11 @@
                     <p>Courses</p>
                 </a>
             </li>
+           
             <li class="nav-item">
-                <a class="nav-link" href="attendance.html">
-                    <img src="images/attendance.png" alt="attendance" style="width: 25px" />
-                    <p>Attendance</p>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="students.html" class="nav-link"><img src="images/classes.png" alt="profile"
+                <a href="lecturer.html" class="nav-link"><img src="images/classes.png" alt="profile"
                         style="width: 25px" />
-                    <p>Students</p>
+                    <p>Lecturer</p>
                 </a>
             </li>
             <li class="nav-item">
