mades some changes to the pages

--- a/template/courses.html
+++ b/template/courses.html
@@ -20,39 +20,48 @@
 
 <body class="d-flex position-relative">
 
-    <aside class="side_nav d-none py-2 pt-4 text-center d-md-flex flex-column align-items-center border"
-        style="height: 100vh; width: fit-content">
-        <a href="#" class="logo">
-            <img src="images/logo.png" class="icon" alt="" style="width: 40px" />
+    <aside
+    class="side_nav d-none py-2 pt-4 text-center d-md-flex flex-column align-items-center border" 
+    style="height: 100vh; width: fit-content" 
+  >
+    <a href="#" class="logo">
+      <img src="images/logo.png" class="icon" alt="" style="width: 40px" />
+    </a>
+    <ul class="nav flex-column mt-4 h-100">
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="hoddashboard.html">
+          <img src="images/dashboard.png"  alt="dashboard" style="width: 25px; padding-top: 20px;"   />
+          <p>Dashboard</p>
         </a>
-        <ul class="nav flex-column mt-4 h-100">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="hoddashboard.html">
-                    <img src="images/dashboard.png" alt="dashboard" style="width: 25px" />
-                    <p>Dashboard</p>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="courses.html"><img src="images/courses.png" alt="courses"
-                        style="width: 20px" />
-                    <p>Courses</p>
-                </a>
-            </li>
-           
-            <li class="nav-item">
-                <a href="lecturer.html" class="nav-link"><img src="images/classes.png" alt="profile"
-                        style="width: 25px" />
-                    <p>Lecturer</p>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link"><img src="images/report.png" alt="report" style="width: 25px" />
-                    <p>Sign out</p>
-                </a>
-            </li>
+      </li>
+      
 
-        </ul>
-    </aside>
+      <li class="nav-item">
+        <a href="courses.html" class="nav-link"
+          ><img src="images/courses.png" alt="profile" style="width: 25px; padding-top: 20px;" />
+          <p>Courses</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="lecturer.html">
+          <img
+            src="images/classes.png"
+            alt="attendance"
+            style="width: 25px; padding-top: 20px;"
+          />
+          <p>Lecturer</p>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link"
+          ><img src="images/report.png" alt="report" style="width: 25px; padding-top: 20px;"/>
+          <p>Sign out</p>
+        </a>
+      </li>
+      
+    </ul>
+  </aside>
+
 
     <div class="container">
 
@@ -87,6 +96,7 @@
                     <th>Course code</th>
                     <th>Course title</th>
                     <th>Status</th>
+                    <td><b>PF Number</b></td>
                 </tr>
             </thead>
             <tbody>
