--- a/template/attendance.html
+++ b/template/attendance.html
@@ -15,37 +15,40 @@
 
 <body class="d-flex position-relative">
 
-    <aside class="side_nav d-none py-2 pt-4 text-center d-md-flex flex-column align-items-center border"
-        style="height: 100vh; width: fit-content">
-        <a href="#" class="logo">
-            <img src="images/logo.png" class="icon" alt="" style="width: 40px" />
-        </a>
-        <ul class="nav flex-column mt-4 h-100">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="teacherdashboard.html">
-                    <img src="images/dashboard.png" alt="dashboard" style="width: 25px" />
-                    <p>Dashboard</p>
-                </a>
-            </li>
-          
-            <li class="nav-item">
-                <a class="nav-link" href="attendance.html">
-                    <img src="images/attendance.png" alt="attendance" style="width: 25px" />
-                    <p>Attendance</p>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="students.html" class="nav-link"><img src="images/classes.png" alt="profile" style="width: 25px" />
-                    <p>Students</p>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link"><img src="images/report.png" alt="report" style="width: 25px" />
-                    <p>Sign out</p>
-                </a>
-            </li>
-
-        </ul>
+    <aside
+      class="side_nav d-none py-2 pt-4 text-center d-md-flex flex-column align-items-center border" 
+      style="height: 100vh; width: fit-content" 
+    >
+      <a href="#" class="logo">
+        <img src="images/logo.png" class="icon" alt="" style="width: 40px" />
+      </a>
+      <ul class="nav flex-column mt-4 h-100">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="teacherdashboard.html">
+            <img src="images/dashboard.png"  alt="dashboard" style="width: 25px; padding-top: 20px;"   />
+            <p>Dashboard</p>
+          </a>
+        </li>
+        
+        <li class="nav-item">
+          <a class="nav-link" href="attendance.html">
+            <img
+              src="images/attendance.png"
+              alt="attendance"
+              style="width: 25px; padding-top: 20px;"
+            />
+            <p>Attendance</p>
+          </a>
+        </li>
+        
+        <li class="nav-item">
+          <a href="#" class="nav-link"
+            ><img src="images/report.png" alt="report" style="width: 25px; padding-top: 20px;"/>
+            <p>Sign out</p>
+          </a>
+        </li>
+        
+      </ul>
     </aside>
 
     <div class="container">
