--- a/template/lecturer.html
+++ b/template/lecturer.html
@@ -32,7 +32,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="courses.html"><img src="images/courses.png" alt="courses" style="width: 20px; padding-top: 20px;" />
+                <a class="nav-link" href="courses.html"><img src="images/courses.png" alt="profile" style="width: 25px; padding-top: 20px;"/>
                     <p>Courses</p>
                 </a>
             </li>
