--- a/template/login.html
+++ b/template/login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles/login.css" />
     <link rel="stylesheet" href="boostrap/css/bootstrap.min.css" />
     <script defer src="boostrap/js/bootstrap.bundle.min.js"></script>
-    <title>Lecturer log in page</title>
+    <title>Log In</title>
 </head>
 <body>
     <form action="../login_handling.php" method="POST">
