--- a/template/hoddashboard.html
+++ b/template/hoddashboard.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="boostrap/css/bootstrap.min.css" />
     <script defer src="boostrap/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-    <title>Document</title>
+    <title>E-attendance</title>
 </head>
 
 <body class="d-flex position-relative">
