--- a/template/lecturer.html
+++ b/template/lecturer.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="boostrap/css/bootstrap.min.css" />
     <script defer src="boostrap/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-    <title>Lecturer's page</title>
+    <title>E-attendance</title>
 </head>
 
 
