--- a/template/teacherdashboard.html
+++ b/template/teacherdashboard.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-    <title>Document</title>
+    <title>E-attendance</title>
   </head>
   <body class="d-flex position-relative">
     
