--- a/template/teacherdashboard.html
+++ b/template/teacherdashboard.html
@@ -43,9 +43,12 @@
         </li>
         
         <li class="nav-item">
-          <a href="#" class="nav-link"
-            ><img src="images/report.png" alt="report" style="width: 25px; padding-top: 20px;"/>
-            <p>Sign out</p>
+          <a href="#" class="nav-link"><img src="images/report.png" alt="report" style="width: 25px; padding-top: 20px;" />
+              <p>Sign out</p>
+          </a>
+      </li>
+                
+            </p>
           </a>
         </li>
         
